--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -11,38 +11,69 @@ on:
 
 jobs:
   build-cdk:
-    uses: ./.github/workflows/build-cdk.yml
-    if: |
-      github.event.head_commit.modified && (
-        'cdk-backend/**' in github.event.head_commit.modified
-      )   
-
+    runs-on: ubuntu-latest  # Ajout de l'environnement d'exécution
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Run Build CDK Workflow
+        uses: ./.github/workflows/build-cdk.yml  # Appel du workflow local
+  
   build-inventory:
-    uses: ./.github/workflows/build-inventory.yml
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Run Build Inventory Workflow
+        uses: ./.github/workflows/build-inventory.yml
     if: |
       github.event.head_commit.modified && (
         'terraform-inventory/**' in github.event.head_commit.modified
       )   
 
   build-debops:
+    runs-on: ubuntu-latest
     needs: build-inventory
-    uses: ./.github/workflows/build-debops.yml
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Run Build DebOps Workflow
+        uses: ./.github/workflows/build-debops.yml
     if: |
       github.event.head_commit.modified && (
         'ansible/Dockerfile' in github.event.head_commit.modified
       )
 
   deploy-cdk:
-    uses: ./.github/workflows/deploy-cdk.yml
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Run Deploy CDK Workflow
+        uses: ./.github/workflows/deploy-cdk.yml
 
   terraform:
+    runs-on: ubuntu-latest
     needs: deploy-cdk
-    uses: ./.github/workflows/terraform.yml
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Run Terraform Workflow
+        uses: ./.github/workflows/terraform.yml
 
   generate-inventory:
+    runs-on: ubuntu-latest
     needs: terraform
-    uses: ./.github/workflows/generate-inventory.yml
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Run Generate Inventory Workflow
+        uses: ./.github/workflows/generate-inventory.yml
 
   run-debops:
+    runs-on: ubuntu-latest
     needs: generate-inventory
-    uses: ./.github/workflows/run-debops.yml
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Run Run DebOps Workflow
+        uses: ./.github/workflows/run-debops.yml
