--- a/.github/workflows/build-cdk.yml
+++ b/.github/workflows/build-cdk.yml
@@ -13,8 +13,13 @@ jobs:
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
+      - name: Set lower case owner name
+        run: echo "OWNER_LC=${OWNER,,}" >> $GITHUB_ENV
+        env:
+          OWNER: ${{ github.repository_owner }}
+
       - name: Build CDK Docker image
-        run: docker build -t ghcr.io/${{ github.repository_owner }}/cdk-backend:latest -f cdk-backend/Dockerfile .
+        run: docker build -t ghcr.io/${{ env.OWNER_LC }}/cdk-backend:latest -f cdk-backend/Dockerfile .
 
       - name: Push CDK Docker image
-        run: docker push ghcr.io/${{ github.repository_owner }}/cdk-backend:latest
+        run: docker push ghcr.io/${{ env.OWNER_LC }}/cdk-backend:latest
