--- a/.github/workflows/build-debops.yml
+++ b/.github/workflows/build-debops.yml
@@ -12,7 +12,12 @@ jobs:
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
+      - name: Set lower case owner name
+        run: echo "OWNER_LC=${OWNER,,}" >> $GITHUB_ENV
+        env:
+          OWNER: ${{ github.repository_owner }}
+
       - name: Build & Push DebOps Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/debops:latest -f ansible/Dockerfile .
-          docker push ghcr.io/${{ github.repository_owner }}/debops:latest
+          docker build -t ghcr.io/${{ env.OWNER_LC }}/debops:latest -f ansible/Dockerfile .
+          docker push ghcr.io/${{ env.OWNER_LC }}/debops:latest
