Fix docker path

--- a/.github/workflows/build-cdk.yml
+++ b/.github/workflows/build-cdk.yml
@@ -19,7 +19,9 @@ jobs:
           OWNER: ${{ github.repository_owner }}
 
       - name: Build CDK Docker image
-        run: docker build -t ghcr.io/${{ env.OWNER_LC }}/cdk-backend:latest -f cdk-backend/Dockerfile .
+        run: |
+          cd cdk-backend
+          docker build -t ghcr.io/${{ env.OWNER_LC }}/cdk-backend:latest -f cdk-backend/Dockerfile .
 
       - name: Push CDK Docker image
         run: docker push ghcr.io/${{ env.OWNER_LC }}/cdk-backend:latest
