--- a/.github/workflows/build-debops.yml
+++ b/.github/workflows/build-debops.yml
@@ -19,5 +19,6 @@ jobs:
 
       - name: Build & Push DebOps Docker image
         run: |
+          cd ansible
           docker build -t ghcr.io/${{ env.OWNER_LC }}/debops:latest -f ansible/Dockerfile .
           docker push ghcr.io/${{ env.OWNER_LC }}/debops:latest
