--- a/.github/workflows/build-cdk.yml
+++ b/.github/workflows/build-cdk.yml
@@ -21,6 +21,8 @@ jobs:
       - name: Build CDK Docker image
         working-directory: cdk-backend
         run: |
+          pwd
+          ls -l
           docker build -t ghcr.io/${{ env.OWNER_LC }}/cdk-backend:latest -f cdk-backend/Dockerfile .
 
       - name: Push CDK Docker image
