--- a/.github/workflows/build-debops.yml
+++ b/.github/workflows/build-debops.yml
@@ -21,6 +21,6 @@ jobs:
         run: |
           pwd
           ls -l        
-          cd ansible
+          cd ./ansible
           docker build -t ghcr.io/${{ env.OWNER_LC }}/debops:latest -f ansible/Dockerfile .
           docker push ghcr.io/${{ env.OWNER_LC }}/debops:latest
