--- a/.github/workflows/build-debops.yml
+++ b/.github/workflows/build-debops.yml
@@ -18,9 +18,7 @@ jobs:
           OWNER: ${{ github.repository_owner }}
 
       - name: Build & Push DebOps Docker image
+        working-directory: ${{ github.workspace }}/ansible
         run: |
-          pwd
-          ls -l        
-          cd ./ansible
           docker build -t ghcr.io/${{ env.OWNER_LC }}/debops:latest -f ansible/Dockerfile .
           docker push ghcr.io/${{ env.OWNER_LC }}/debops:latest
