--- a/.github/workflows/build-cdk.yml
+++ b/.github/workflows/build-cdk.yml
@@ -5,6 +5,8 @@ on:
 
 jobs:
   build-cdk-image:
+    permissions:
+      packages: write  
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
