--- a/.github/workflows/build-debops.yml
+++ b/.github/workflows/build-debops.yml
@@ -5,6 +5,8 @@ on:
 
 jobs:
   build-debops:
+    permissions:
+      packages: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
