--- a/.github/workflows/build-inventory.yml
+++ b/.github/workflows/build-inventory.yml
@@ -5,6 +5,8 @@ on:
 
 jobs:
   build-inventory:
+    permissions:
+      packages: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
