--- a/.github/workflows/build-cdk.yml
+++ b/.github/workflows/build-cdk.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Log in to GitHub Container Registry
-        run: echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+        run: echo ${{ env.GHCR_TOKEN }} | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
       - name: Set lower case owner name
         run: echo "OWNER_LC=${OWNER,,}" >> $GITHUB_ENV
