--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -11,12 +11,10 @@ on:
 
 jobs:
   show-token:
-    runs-on: ubuntu-latest
-    env:
-      GHCR_TOKEN: 'pouet'     
+    runs-on: ubuntu-latest   
     steps:  
       - name: Show GHCR_TOKEN
-        run: echo "GHCR_TOKEN=${{ env.GHCR_TOKEN }}"
+        run: echo "GHCR_TOKEN=${{ vars.GHCR_TOKEN }}"
   build-cdk:
     uses: ./.github/workflows/build-cdk.yml
     # if: |
