--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest   
     steps:  
       - name: Show GHCR_TOKEN
-        run: echo "GHCR_TOKEN=${{ vars.GHCR_TOKEN }}"
+        run: echo "GHCR_TOKEN=${{ secrets.GHCR_TOKEN }}"
   build-cdk:
     uses: ./.github/workflows/build-cdk.yml
     # if: |
