--- a/.github/workflows/build-cdk.yml
+++ b/.github/workflows/build-cdk.yml
@@ -9,12 +9,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Show GHCR_TOKEN
-        run: echo "GHCR_TOKEN=${{ env.GHCR_TOKEN }}"
         
       - name: Log in to GitHub Container Registry
-        run: echo "${{ env.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+        run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
       - name: Set lower case owner name
         run: echo "OWNER_LC=${OWNER,,}" >> $GITHUB_ENV
