--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -10,6 +10,18 @@ on:
     #   - ansible/Dockerfile
 
 jobs:
+  login_ghcr:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        
+      - name: Show GHCR_TOKEN
+        run: echo "GHCR_TOKEN=${{ secrets.GHCR_TOKEN }}"
+
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+
   build-cdk:
     uses: ./.github/workflows/build-cdk.yml
     # if: |
