Fix build debops

--- a/ansible/Dockerfile.prod
+++ b/ansible/Dockerfile.prod
@@ -13,8 +13,7 @@ USER ansible
 WORKDIR /home/ansible
 
 RUN mkdir -p /home/ansible/.ssh && \
-    chmod 700 /home/ansible/.ssh && \
-    chmod 644 /home/ansible/.ssh/known_hosts
+    chmod 700 /home/ansible/.ssh
 
 ENV PATH=$PATH:/root/.local/bin
 RUN pip3 install --user --upgrade debops[ansible]
