--- a/.github/workflows/build-cdk.yml
+++ b/.github/workflows/build-cdk.yml
@@ -2,6 +2,10 @@ name: Build CDK Docker Image
 
 on:
   workflow_call:
+    inputs:
+      owner_lc:
+        required: true
+        type: string
 
 jobs:
   build-cdk-image:
@@ -9,22 +13,17 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        
+
       - name: Show GHCR_TOKEN
         run: echo "GHCR_TOKEN=${{ secrets.GHCR_TOKEN }}"
 
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
-      - name: Set lower case owner name
-        run: echo "OWNER_LC=${OWNER,,}" >> $GITHUB_ENV
-        env:
-          OWNER: ${{ github.repository_owner }}
-
       - name: Build CDK Docker image
         working-directory: cdk-backend
         run: |
-          docker build -t ghcr.io/${{ env.OWNER_LC }}/cdk-backend:latest -f Dockerfile .
+          docker build -t ghcr.io/${{ inputs.owner_lc }}/cdk-backend:latest -f Dockerfile .
 
       - name: Push CDK Docker image
-        run: docker push ghcr.io/${{ env.OWNER_LC }}/cdk-backend:latest
+        run: docker push ghcr.io/${{ inputs.owner_lc }}/cdk-backend:latest
