--- a/.github/workflows/build-debops.yml
+++ b/.github/workflows/build-debops.yml
@@ -2,6 +2,10 @@ name: Build Debops/Ansible Docker Image
 
 on:
   workflow_call:
+    inputs:
+      owner_lc:
+        required: true
+        type: string
 
 jobs:
   build-debops:
@@ -12,13 +16,8 @@ jobs:
       - name: Log in to GitHub Container Registry
         run: echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
-      - name: Set lower case owner name
-        run: echo "OWNER_LC=${OWNER,,}" >> $GITHUB_ENV
-        env:
-          OWNER: ${{ github.repository_owner }}
-
       - name: Build & Push DebOps Docker image
         working-directory: ansible
         run: |
-          docker build -t ghcr.io/${{ env.OWNER_LC }}/debops:latest -f Dockerfile.prod .
-          docker push ghcr.io/${{ env.OWNER_LC }}/debops:latest
+          docker build -t ghcr.io/${{ inputs.owner_lc }}/debops:latest -f Dockerfile.prod .
+          docker push ghcr.io/${{ inputs.owner_lc }}/debops:latest
