--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -4,15 +4,29 @@ on:
   push:
     branches:
       - main
-    # paths:
-    #   - cdk-backend/**
-    #   - terraform-inventory/**
-    #   - ansible/Dockerfile
 
 jobs:
+  set-env:
+    runs-on: ubuntu-latest
+    outputs:
+      owner_lc: ${{ steps.set-owner-lc.outputs.OWNER_LC }}
+    steps:
+      - name: Set lower case owner name
+        id: set-owner-lc
+        run: echo "OWNER_LC=${OWNER,,}" >> "$GITHUB_ENV"
+        env:
+          OWNER: ${{ github.repository_owner }}
 
+      - name: Export owner_lc as output
+        run: echo "OWNER_LC=${OWNER,,}" >> "$GITHUB_OUTPUT"
+        env:
+          OWNER: ${{ github.repository_owner }}
+          
   build-cdk:
     uses: ./.github/workflows/build-cdk.yml
+    needs: set-env
+    with:
+      owner_lc: ${{ needs.set-env.outputs.owner_lc }}    
     secrets: inherit    
     # if: |
     #   github.event.head_commit.modified && (
@@ -21,10 +35,16 @@ jobs:
   
   build-inventory:
     uses: ./.github/workflows/build-inventory.yml    
+    needs: set-env
+    with:
+      owner_lc: ${{ needs.set-env.outputs.owner_lc }}     
     secrets: inherit       
 
   build-debops:
     uses: ./.github/workflows/build-debops.yml
+    needs: set-env
+    with:
+      owner_lc: ${{ needs.set-env.outputs.owner_lc }}     
     secrets: inherit
     # if: |
     #   github.event.head_commit.modified && (
@@ -33,6 +53,9 @@ jobs:
 
   deploy-cdk:
     uses: ./.github/workflows/deploy-cdk.yml
+    needs: set-env
+    with:
+      owner_lc: ${{ needs.set-env.outputs.owner_lc }}     
 
   terraform:
     uses: ./.github/workflows/terraform.yml
@@ -40,8 +63,12 @@ jobs:
 
   generate-inventory:
     uses: ./.github/workflows/generate-inventory.yml
-    needs: terraform
+    needs: [terraform,set-env]
+    with:
+      owner_lc: ${{ needs.set-env.outputs.owner_lc }}      
 
   run-debops:
     uses: ./.github/workflows/run-debops.yml
-    needs: generate-inventory
+    needs: [generate-inventory,set-env]
+    with:
+      owner_lc: ${{ needs.set-env.outputs.owner_lc }}      
