--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -9,16 +9,11 @@ jobs:
   set-env:
     runs-on: ubuntu-latest
     outputs:
-      owner_lc: ${{ steps.set-owner-lc.outputs.OWNER_LC }}
+      owner_lc: ${{ steps.set-owner-lc.outputs.owner_lc }} 
     steps:
       - name: Set lower case owner name
         id: set-owner-lc
-        run: echo "OWNER_LC=${OWNER,,}" >> "$GITHUB_ENV"
-        env:
-          OWNER: ${{ github.repository_owner }}
-
-      - name: Export owner_lc as output
-        run: echo "OWNER_LC=${OWNER,,}" >> "$GITHUB_OUTPUT"
+        run: echo "owner_lc=${OWNER,,}" >> "$GITHUB_OUTPUT"
         env:
           OWNER: ${{ github.repository_owner }}
           
