--- a/.github/workflows/build-inventory.yml
+++ b/.github/workflows/build-inventory.yml
@@ -24,3 +24,11 @@ jobs:
 
       - name: Push CDK Docker image
         run: docker push ghcr.io/${{ inputs.owner_lc }}/terraform-inventory:latest
+
+      - name: Set image to public
+        run: |
+          gh api --method PATCH \
+            -H "Authorization: token ${{ secrets.GHCR_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "/user/packages/container/${{ inputs.owner_lc }}/terraform-inventory/versions" \
+            -f visibility=public
