--- a/.github/workflows/build-cdk.yml
+++ b/.github/workflows/build-cdk.yml
@@ -26,9 +26,10 @@ jobs:
         run: docker push ghcr.io/${{ inputs.owner_lc }}/cdk-backend:latest
 
       - name: Set image to public
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}           
         run: |
           gh api --method PATCH \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             "/user/packages/container/${{ inputs.owner_lc }}/cdk-backend/versions" \
             -f visibility=public
