--- a/.github/workflows/build-debops.yml
+++ b/.github/workflows/build-debops.yml
@@ -14,19 +14,23 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Log in to GitHub Container Registry
-        run: echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Build & Push DebOps Docker image
-        working-directory: ansible
-        run: |
-          docker build -t ghcr.io/${{ inputs.owner_lc }}/debops:latest -f Dockerfile.prod .
-          docker push ghcr.io/${{ inputs.owner_lc }}/debops:latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Set image to public
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
-        run: |
-          gh api --method PATCH \
-            -H "Accept: application/vnd.github.v3+json" \
-            "/orgs/packages/container/${{ inputs.owner_lc }}/debops/versions" \
-            -f visibility=public
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: ansible
+          file: ansible/Dockerfile
+          push: true
+          tags: ghcr.io/${{ inputs.owner_lc }}/ansible:latest
+          provenance: false
+          build-args: |
+            OWNER_LC=${{ inputs.owner_lc }}
+          visibility: public
