--- a/.github/workflows/build-inventory.yml
+++ b/.github/workflows/build-inventory.yml
@@ -15,21 +15,23 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Log in to GitHub Container Registry
-        run: echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Build CDK Docker image
-        working-directory: terraform-inventory
-        run: |
-          docker build -t ghcr.io/${{ inputs.owner_lc }}/terraform-inventory:latest -f Dockerfile .
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Push CDK Docker image
-        run: docker push ghcr.io/${{ inputs.owner_lc }}/terraform-inventory:latest
-
-      - name: Set image to public
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}           
-        run: |
-          gh api --method PATCH \
-            -H "Accept: application/vnd.github.v3+json" \
-            "/orgs/packages/container/${{ inputs.owner_lc }}/terraform-inventory/versions" \
-            -f visibility=public
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: terraform-inventory
+          file: terraform-inventory/Dockerfile
+          push: true
+          tags: ghcr.io/${{ inputs.owner_lc }}/terraform-inventory:latest
+          provenance: false
+          build-args: |
+            OWNER_LC=${{ inputs.owner_lc }}
+          visibility: public
