--- a/.github/workflows/build-cdk.yml
+++ b/.github/workflows/build-cdk.yml
@@ -6,7 +6,10 @@ on:
       owner_lc:
         required: true
         type: string
-
+      repo_url:
+        required: true
+        type: string
+        
 jobs:
   build-cdk-image:
     runs-on: ubuntu-latest
