--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -10,18 +10,23 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       owner_lc: ${{ steps.set-owner-lc.outputs.owner_lc }} 
+      repo_url: ${{ github.repository }}
     steps:
       - name: Set lower case owner name
         id: set-owner-lc
         run: echo "owner_lc=${OWNER,,}" >> "$GITHUB_OUTPUT"
         env:
           OWNER: ${{ github.repository_owner }}
+      - name: Set repository URL
+        id: set-repo-url
+        run: echo "REPO_URL=${{ github.repository }}" >> $GITHUB_ENV          
           
   build-cdk:
     uses: ./.github/workflows/build-cdk.yml
     needs: set-env
     with:
       owner_lc: ${{ needs.set-env.outputs.owner_lc }}    
+      repo_url: ${{ needs.set-env.outputs.repo_url }}
     secrets: inherit    
     # if: |
     #   github.event.head_commit.modified && (
@@ -33,6 +38,7 @@ jobs:
     needs: set-env
     with:
       owner_lc: ${{ needs.set-env.outputs.owner_lc }}     
+      repo_url: ${{ needs.set-env.outputs.repo_url }}
     secrets: inherit       
 
   build-debops:
@@ -40,6 +46,7 @@ jobs:
     needs: set-env
     with:
       owner_lc: ${{ needs.set-env.outputs.owner_lc }}     
+      repo_url: ${{ needs.set-env.outputs.repo_url }}
     secrets: inherit
     # if: |
     #   github.event.head_commit.modified && (
