--- a/.github/workflows/build-debops.yml
+++ b/.github/workflows/build-debops.yml
@@ -9,7 +9,7 @@ on:
       repo_url:
         required: true
         type: string
-        
+
 jobs:
   build-debops:
     runs-on: ubuntu-latest
@@ -37,4 +37,4 @@ jobs:
           build-args: |
             OWNER_LC=${{ inputs.owner_lc }}
           labels: |
-            org.opencontainers.image.source=https://github.com/${{ inputs.owner_lc }}/${{ github.repository }}
+            org.opencontainers.image.source=https://github.com/${{ inputs.owner_lc }}/${{ inputs.repo_url }}
