--- a/.github/workflows/build-inventory.yml
+++ b/.github/workflows/build-inventory.yml
@@ -9,7 +9,7 @@ on:
       repo_url:
         required: true
         type: string
-        
+
 jobs:
   build-inventory:
     runs-on: ubuntu-latest
@@ -38,4 +38,4 @@ jobs:
           build-args: |
             OWNER_LC=${{ inputs.owner_lc }}
           labels: |
-            org.opencontainers.image.source=https://github.com/${{ inputs.owner_lc }}/${{ github.repository }}
+            org.opencontainers.image.source=https://github.com/${{ inputs.owner_lc }}/${{ inputs.repo_url }}
