Secret for deploy-cdk

--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -58,6 +58,7 @@ jobs:
     needs: set-env
     with:
       owner_lc: ${{ needs.set-env.outputs.owner_lc }}     
+    secrets: inherit      
 
   terraform:
     uses: ./.github/workflows/terraform.yml
