--- a/.github/workflows/deploy-cdk.yml
+++ b/.github/workflows/deploy-cdk.yml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }      
+          password: ${{ secrets.GHCR_TOKEN }}      
 
       - name: Configure AWS credentials
         run: |
