--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: hashicorp/terraform:latest
+      env:
+        TF_VAR_vpc_id: ${{ vars.TF_VAR_VPC_ID }}
+        TF_VAR_ssh_key_name: ${{ vars.TF_VAR_SSH_KEY_NAME }}  
     steps:
       - uses: actions/checkout@v4
 
@@ -15,7 +18,7 @@ jobs:
         run: |
           aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws configure set default.region us-east-1
+          aws configure set default.region eu-west-3
 
       - name: Initialize Terraform
         run: terraform init
