--- a/.github/workflows/deploy-cdk.yml
+++ b/.github/workflows/deploy-cdk.yml
@@ -31,8 +31,5 @@ jobs:
       - name: Bootstrap CDK (if needed)
         run: cdk bootstrap aws://$(aws sts get-caller-identity --query "Account" --output text)/$AWS_REGION
 
-      - name: Debug - Check Python
-        run: python --version
-        
       - name: Deploy CDK Stack
-        run: cdk deploy --require-approval never
+        run: cdk deploy --app "python cdk_backend.py" --require-approval never
