--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -28,10 +28,10 @@ jobs:
       owner_lc: ${{ needs.set-env.outputs.owner_lc }}    
       repo_url: ${{ needs.set-env.outputs.repo_url }}
     secrets: inherit    
-    # if: |
-    #   github.event.head_commit.modified && (
-    #     'cdk-backend/**' in github.event.head_commit.modified
-    #   )           
+    if: |
+      github.event.head_commit.modified && (
+        'cdk-backend/**' in github.event.head_commit.modified
+      )           
   
   build-inventory:
     uses: ./.github/workflows/build-inventory.yml    
@@ -40,6 +40,10 @@ jobs:
       owner_lc: ${{ needs.set-env.outputs.owner_lc }}     
       repo_url: ${{ needs.set-env.outputs.repo_url }}
     secrets: inherit       
+    if: |
+      github.event.head_commit.modified && (
+        'terraform-inventory/**' in github.event.head_commit.modified
+      )    
 
   build-debops:
     uses: ./.github/workflows/build-debops.yml
@@ -48,10 +52,10 @@ jobs:
       owner_lc: ${{ needs.set-env.outputs.owner_lc }}     
       repo_url: ${{ needs.set-env.outputs.repo_url }}
     secrets: inherit
-    # if: |
-    #   github.event.head_commit.modified && (
-    #     'ansible/Dockerfile' in github.event.head_commit.modified
-    #   )
+    if: |
+      github.event.head_commit.modified && (
+        'ansible/Dockerfile' in github.event.head_commit.modified
+      )
 
   deploy-cdk:
     uses: ./.github/workflows/deploy-cdk.yml
