--- a/.github/workflows/deploy-cdk.yml
+++ b/.github/workflows/deploy-cdk.yml
@@ -32,4 +32,4 @@ jobs:
         run: cdk bootstrap aws://$(aws sts get-caller-identity --query "Account" --output text)/$AWS_REGION
 
       - name: Deploy CDK Stack
-        run: pwd && ls -la && cdk deploy --app "python cdk_backend.py" --require-approval never
+        run: pwd && ls -la /app && cdk deploy --app "python cdk_backend.py" --require-approval never
