--- a/.github/workflows/deploy-cdk.yml
+++ b/.github/workflows/deploy-cdk.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws configure set default.region eu-west-3
+          aws configure set default.region ${{ vars.AWS_REGION }}
 
       - name: Bootstrap CDK (if needed)
         run: cdk bootstrap aws://$(aws sts get-caller-identity --query "Account" --output text)/$AWS_REGION
