--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,16 +9,13 @@ jobs:
     container:
       image: hashicorp/terraform:latest
       env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ vars.AWS_SECRET_ACCESS_KEY }}   
         TF_VAR_vpc_id: ${{ vars.TF_VAR_VPC_ID }}
         TF_VAR_ssh_key_name: ${{ vars.TF_VAR_SSH_KEY_NAME }}  
     steps:
       - uses: actions/checkout@v4
-
-      - name: Configure AWS credentials
-        run: |
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws configure set default.region eu-west-3
 
       - name: Initialize Terraform
         run: terraform init
