--- a/.github/workflows/generate-inventory.yml
+++ b/.github/workflows/generate-inventory.yml
@@ -14,7 +14,8 @@ jobs:
       image: ghcr.io/${{ inputs.owner_lc }}/terraform-inventory:latest
       credentials:
         username: ${{ github.actor }}
-        password: ${{ secrets.GHCR_TOKEN }}     
+        password: ${{ secrets.GHCR_TOKEN }}
+      env:        
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}         
     steps:
