--- a/terraform-inventory/Dockerfile
+++ b/terraform-inventory/Dockerfile
@@ -1,5 +1,15 @@
 FROM python:3.13-slim
 
+RUN apt-get update && apt-get install -y \
+    curl \
+    unzip \
+    groff \
+    less \
+    && curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" \
+    && unzip awscliv2.zip \
+    && sudo ./aws/install \
+    && rm -rf awscliv2.zip ./aws
+
 WORKDIR /app
 
 ADD requirements.txt /app/requirements.txt
