--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -18,7 +18,6 @@ jobs:
       env:
          ANSIBLE_USER_SSH_PUBLIC_KEY: ${{ secrets.ANSIBLE_USER_SSH_PUBLIC_KEY }}
     steps:
-      - uses: actions/checkout@v4
 
       - name: Set up SSH
         run: echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add -
@@ -33,8 +32,8 @@ jobs:
           name: ansible-inventory
 
       - name: Move Inventory File      
-        run: mv inventory.ini ansible/project/ansible/inventory/hosts
+        run: mv inventory.ini /home/ansible/project/ansible/inventory/hosts
 
       - name: Run Ansible Bootstrap
-        working-directory: ansible/project
+        working-directory: /home/ansible/project
         run: debops run bootstrap -i ansible/hosts -l amazon -e 'ansible_user=admin'
