--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -30,9 +30,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ansible-inventory
+          path: /home/ansible/project
 
       - name: Move Inventory File      
-        run: mv inventory.ini /home/ansible/project/ansible/inventory/hosts
+        run: mv /home/ansible/project/inventory.ini /home/ansible/project/ansible/inventory/hosts
 
       - name: Prepare Ansible Configurations
         working-directory: /home/ansible/project
@@ -40,7 +41,7 @@ jobs:
           pwd
           ls -l
           bash add_known_hosts.sh
-          
+
       - name: Run Ansible Bootstrap
         working-directory: /home/ansible/project
         run: debops run bootstrap -i ansible/hosts -l amazon -e 'ansible_user=admin'
