--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ansible-inventory
-          path: /home/ansible/project
+          path: /home/ansible
 
       - name: Move Inventory File      
         run: mv /home/ansible/project/inventory.ini /home/ansible/project/ansible/inventory/hosts
