--- a/ansible/Dockerfile.prod
+++ b/ansible/Dockerfile.prod
@@ -15,7 +15,7 @@ RUN mkdir -p /home/ansible/.ssh && \
     chmod 700 /home/ansible/.ssh
 
 ENV PATH=$PATH:/root/.local/bin
-RUN pip3 install --user --upgrade debops[ansible]
+RUN pip3 install --upgrade debops[ansible]
 
 WORKDIR /home/ansible/project
 
