--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -42,4 +42,4 @@ jobs:
 
       - name: Run Ansible Bootstrap
         working-directory: /home/ansible/project
-        run: debops run bootstrap -i ansible/hosts -l amazon -e 'ansible_user=admin'
+        run: ls ~/.local/share/debops/ansible/playbooks/ && debops run bootstrap -i ansible/hosts -l amazon -e 'ansible_user=admin'
