--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -48,31 +48,31 @@ jobs:
       owner_lc: ${{ needs.set-env.outputs.owner_lc }}     
       repo_url: ${{ needs.set-env.outputs.repo_url }}
     secrets: inherit
-    # if: |
-    #   contains(github.event.head_commit.modified, 'ansible/Dockerfile')
+    if: |
+      contains(github.event.head_commit.modified, 'ansible/Dockerfile')
 
-  deploy-cdk:
-    uses: ./.github/workflows/deploy-cdk.yml
-    needs: set-env
-    with:
-      owner_lc: ${{ needs.set-env.outputs.owner_lc }}     
-    secrets: inherit      
+  # deploy-cdk:
+  #   uses: ./.github/workflows/deploy-cdk.yml
+  #   needs: set-env
+  #   with:
+  #     owner_lc: ${{ needs.set-env.outputs.owner_lc }}     
+  #   secrets: inherit      
 
-  terraform:
-    uses: ./.github/workflows/terraform.yml
-    needs: deploy-cdk
-    secrets: inherit
+  # terraform:
+  #   uses: ./.github/workflows/terraform.yml
+  #   needs: deploy-cdk
+  #   secrets: inherit
 
-  generate-inventory:
-    uses: ./.github/workflows/generate-inventory.yml
-    needs: [terraform,set-env]
-    with:
-      owner_lc: ${{ needs.set-env.outputs.owner_lc }}      
-    secrets: inherit            
+  # generate-inventory:
+  #   uses: ./.github/workflows/generate-inventory.yml
+  #   needs: [terraform,set-env]
+  #   with:
+  #     owner_lc: ${{ needs.set-env.outputs.owner_lc }}      
+  #   secrets: inherit            
 
   run-debops:
     uses: ./.github/workflows/run-debops.yml
-    needs: [generate-inventory,set-env]
+    needs: [set-env]
     with:
       owner_lc: ${{ needs.set-env.outputs.owner_lc }}    
     secrets: inherit  
